--- a/app.json
+++ b/app.json
@@ -1,12 +1,32 @@
 {
-  "pages":[
+  "pages": [
     "pages/books/books",
+    "pages/my/my",
     "pages/logs/logs"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#f2f2f2",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh": false
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/books/books",
+      "text": "书架",
+      "iconpath": "images/book.png",
+      "selectedIconPath": "images/bookSelected.png"
+    }, {
+      "pagePath": "pages/my/my",
+      "text": "我的",
+      "iconpath": "images/my.png",
+      "selectedIconPath": "images/mySelected.png"
+    }],
+    "color": "#bfbfbf",
+    "selectedColor": "#1aad19"
+  },
+  "networkTimeout": {
+    "request": 3000
   }
 }
